# RdPBrowser

./: .gitignore  README.md  RELEASE_NOTES_v1.1.0.md  convert.js  convert.py  create-icons.js  fix-ico.py  package-lock.json
.github/workflows/: ci.yml  release-android.yml
admin-dashboard/: app.js  index.html  styles.css
android/: pubspec.yaml
android/android/: build.gradle  gradle.properties  key.properties.template
android/android/app/: build.gradle  proguard-rules.pro
android/lib/: main.dart
android/lib/models/: bookmark.dart  browser_tab.dart  history_entry.dart
android/lib/providers/: browser_provider.dart
android/lib/screens/: browser_screen.dart  login_screen.dart  vpn_guard_screen.dart
android/lib/security/: tamper_check.dart
android/lib/services/: vpn_service.dart
backend/: .env.example  .eslintrc.cjs  .npmrc  package-lock.json  package.json
backend/src/: index.js
backend/src/__tests__/: app.test.js
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: integrity.rs  main.rs  platform.rs  vpn.rs
docker/: Dockerfile.backend  Dockerfile.nginx  docker-compose.yml
nginx/: nginx.conf
security/anomaly-detector/: detector.js
security/integrity-checker/: check.js
vpn-server/: setup.sh
vpn-server/client-configs/: android.conf  linux.conf  macos.conf  windows.conf
vpn-server/wireguard/: wg0.conf
(+24 files in other folders)
