[package]
name = "remoteshield-x"
version = "1.0.0"
description = "RemoteShield X — Secure Remote Work Browser"
authors = ["RemoteShield X Team"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/RdPBrowser"
edition = "2021"
rust-version = "1.77"

# See more keys at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri                      = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell         = "2.0.0"
tauri-plugin-notification  = "2.0.0"
tauri-plugin-http          = "2.0.0"
tauri-plugin-store         = "2.0.0"
serde                      = { version = "1.0", features = ["derive"] }
serde_json                 = "1.0"
tokio                      = { version = "1.0", features = ["full"] }
reqwest                    = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sha2                       = "0.10"
hex                        = "0.4"
whoami                     = "1.4"
sys-info                   = "0.9"
log                        = "0.4"
env_logger                 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
